Add few builder methods for DownloadOptions
Now you can replace long constructs like `using(FOLDER).withFilter(withExtension("txt"))`
by a shorter form `file().withExtension("txt")`.